Opened 7 years ago
Closed 7 years ago
#10571 closed bug (fixed)
Slow app_server drawing with new scheduler
Reported by: | jua | Owned by: | pdziepak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | scheduler graphics app_server | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
With the new scheduler, I get very slow graphics drawing on my machine. Dragging windows around is slow and lagging, same with e.g. scrolling a website in WebPositive. Fluid video playback is impossible.
A good way to benchmark this is the "Chart" application from our Demos folder. I tested with 3 Haiku revisions:
- hrev46684 (nightly right before the scheduler merge)
- hrev46699 (nightly right after the scheduler merge)
- hrev46893 (latest nightly)
Selecting "DirectWindow" as display method in Chart, all three revisions get fluid 60fps with 3% CPU usage. However, using "DrawBitmap", the problem becomes apparent: only the pre-scheduler-merge version performs well and fluid, the others suffer from very bad performance (less than 10fps even at 100% CPU usage).
I'm attaching 3 screenshots of the test which also show ActivityMonitor.
Test system: AMD E-450 APU (dual core), Radeon HD6320, 2GB RAM. Same behaviour with both, radeon_hd and VESA graphics driver.
Let me know if further information is required.
Attachments (4)
Change History (9)
by , 7 years ago
Attachment: | chart_hrev46684.png added |
---|
by , 7 years ago
Attachment: | chart_hrev46893.png added |
---|
Running Chart on hrev46893 (new scheduler, latest)
comment:1 by , 7 years ago
Description: | modified (diff) |
---|
comment:2 by , 7 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
follow-up: 4 comment:3 by , 7 years ago
Is the problem still present when running Haiku with SMP disabled? Also, full syslog may be useful.
comment:4 by , 7 years ago
Replying to pdziepak:
Is the problem still present when running Haiku with SMP disabled?
Yes, makes no difference.
Also, full syslog may be useful.
See below.
by , 7 years ago
comment:5 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Found the bug in the changes to generic_x86 add-on. Fixed in hrev46941
Running Chart on hrev46684 (old scheduler)